# GraphicEngine

./: CMakeLists.txt  README.md
src/engine/: CMakeLists.txt  camera.cpp  camera.hpp  group.cpp  group.hpp  main.cpp  model.cpp  model.hpp  parsing.cpp  parsing.hpp
src/engine/transformations/: rotation.cpp  rotation.hpp  scalation.cpp  scalation.hpp  translation.cpp  translation.hpp
src/generator/: CMakeLists.txt  bezierpatches.cpp  bezierpatches.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  main.cpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  torus.cpp  torus.hpp
src/solar_script/: element.py  gen_elements_xml.py  main.py  solar_system.xml  transformations.py
src/utils/: CMakeLists.txt  point.cpp  point.hpp  spherical_coord.cpp  spherical_coord.hpp  spherical_point.cpp  spherical_point.hpp  vector.cpp  vector.hpp
